: 前端开发基础

--- a/03-常用的JavaScript库/01_jQuery/02_jQuery计数器.html
+++ b/03-常用的JavaScript库/01_jQuery/02_jQuery计数器.html
@@ -20,11 +20,10 @@
       const $subBtn = $(".sub")
       const $counter = $(".counter")
 
-      $addBtn.click(function () {
+      $addBtn.on('click', function () {
         $counter.text(parseInt($counter.text()) + 1)
       })
-
-      $subBtn.click(function () {
+      $subBtn.on('click', function () {
         $counter.text(parseInt($counter.text()) - 1)
       })
     })
