--- a/03-常用的JavaScript库/01_jQuery/03_jQuery对象.html
+++ b/03-常用的JavaScript库/01_jQuery/03_jQuery对象.html
@@ -13,6 +13,13 @@
   <button class="btn">按钮</button>
   <button class="btn">按钮</button>
 
+  <div>
+    <ul>
+      <li>1</li>
+      <li>2</li>
+    </ul>
+  </div>
+
   <script src="./js/jquery-3.7.1.js"></script>
 
   <script>
@@ -24,6 +31,9 @@
 
     // 创建一个匹配到多个 btn 元素的集合
     console.log($(".btn"))
+
+    // 创建一个匹配到多个 li 元素的集合，指定上下文环境
+    console.log($("li", document.querySelector("div")))
   </script>
 
 </body>
