: 前端开发基础

--- a/03-常用的JavaScript库/01_jQuery/05_jQuery的文本操作.html
+++ b/03-常用的JavaScript库/01_jQuery/05_jQuery的文本操作.html
@@ -20,8 +20,8 @@
   <script>
     // 获取文本
     console.log($(".box").text())
-    // 设置文本
-    $(".box li:last-child").text("最后一个元素")
+    // 设置文本，会给匹配到的所有元素设置文本
+    $(".box li").text("li元素")
   </script>
 </body>
 </html>
