--- a/03-常用的JavaScript库/01_jQuery/05_jQuery的文本操作.html
+++ b/03-常用的JavaScript库/01_jQuery/05_jQuery的文本操作.html
@@ -22,6 +22,8 @@
     console.log($(".box").text())
     // 设置文本，会给匹配到的所有元素设置文本
     $(".box li").text("li元素")
+    // 获取 html
+    console.log($(".box li").html())
   </script>
 </body>
 </html>
