: 前端开发基础

--- a/03-常用的JavaScript库/02_ajax请求库的封装/index.html
+++ b/03-常用的JavaScript库/02_ajax请求库的封装/index.html
@@ -4,10 +4,251 @@
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Title</title>
+  <title>广州房产网_广州二手房|租房|新房|房地产信息网【广州弘源找房】</title>
+  <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="./css/reset.css" rel="stylesheet">
+  <link href="./css/common.less" rel="stylesheet/less">
+  <link href="./css/bk_header.less" rel="stylesheet/less">
+  <link href="./css/bk_second_house.less" rel="stylesheet/less">
+  <link href="./css/bk_new_house.less" rel="stylesheet/less">
+  <script src="./js/less.min.js"></script>
 </head>
 <body>
+
+  <div class="header">
+    <div class="top-bar">
+      <div class="left">
+        <a class="logo" href="https://gz.ke.com/" target="_blank"></a>
+        <a class="city" href="https://www.ke.com/city/" target="_blank">
+          <i class="icon addr-icon"></i>
+          <span class="address">深圳</span>
+        </a>
+      </div>
+      <div class="right">
+        <div class="nav">
+          <ul>
+            <li><a href="javascript:void(0);">二手房</a></li>
+            <li><a href="javascript:void(0);">新房</a></li>
+            <li><a href="javascript:void(0);">租房</a></li>
+            <li><a href="javascript:void(0);">商业办公</a></li>
+            <li><a href="javascript:void(0);">小区</a></li>
+            <li><a href="javascript:void(0);">贝壳研究院</a></li>
+            <li><a href="javascript:void(0);">投资者关系</a></li>
+            <li><a href="javascript:void(0);">我是业主</a></li>
+            <li><a href="javascript:void(0);">下载APP</a></li>
+          </ul>
+        </div>
+        <div class="login">
+          <i class="icon user-icon"></i>
+          <a href="javascript:void(0);" target="_blank">登录</a>
+          <span>&nbsp;/&nbsp;</span>
+          <a href="javascript:void(0);" target="_blank">注册</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper content">
+      <div class="title">
+        <div class="title-small">要找真房源 还是贝壳全</div>
+        <div class="title-big">开始寻找属于你的家</div>
+      </div>
+
+      <div class="search-box">
+        <div class="search-menu">
+          <ul>
+            <li class="item active"><span>找二手房</span></li>
+            <li class="item"><span>找新房</span></li>
+            <li class="item"><span>找租房</span></li>
+            <li class="item"><span>找小区</span></li>
+            <li class="item"><span>找商铺办公室</span></li>
+          </ul>
+          <i class="arrow"></i>
+        </div>
+
+        <div class="search-bar">
+          <input class="house-search" placeholder="请输入区域、商圈或小区名开始找房" type="text">
+          <span class="loc-addr">
+              <a class="location" href="javascript:void(0);">
+                <i class="location-icon"></i>
+                <span>地图</span>
+              </a>
+            </span>
+
+          <a class="search-btn" href="javascript:void(0);">
+            <i class="icon search-icon"></i>
+          </a>
+
+        </div>
+
+        <div class="search-tips">
+          <ul class="search-list">
+            <li><span>热门搜索</span></li>
+            <li><span>星海名城</span></li>
+            <li><span>诺德国际花园</span></li>
+            <li><span>金弘凯城</span></li>
+            <li><font color='#3072F6'>龙华</font>小区</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper bottom">
+      <div class="house-num">
+        <i class="icon trumpet-icon"></i>
+        <ul>
+          <li class="item">深圳在售新房楼盘 710 个</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="wrapper second-house">
+    <div class="house-title">
+      <h2 class="name">二手好房</h2>
+      <p class="sub-name">
+        好房源那么多，我们为你精选
+        <a href="/ershoufang/">更多深圳二手房</a>
+      </p>
+    </div>
+
+    <div class="house">
+      <div class="item">
+        <div class="bg">
+          <img alt="" class="tag-img" src="img/tag.png">
+
+          <img alt="" class="vrlogo" src="img/vrlogo@2x.png">
+        </div>
+        <div class="bottom">
+          <div class="name">
+            <p>坪山区·坪山</p>
+            <p>深业东城国际</p>
+          </div>
+          <div class="info">
+            <span class="description">3室2厅·81.01平米</span>
+            <div class="price">
+              <span class="price-ref">参考价:</span>
+              <span class="price-val">293万</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="bg">
+          <img alt="" class="tag-img" src="img/tag.png">
+
+          <img alt="" class="vrlogo" src="img/vrlogo@2x.png">
+        </div>
+        <div class="bottom">
+          <div class="name">
+            <p>坪山区·坪山</p>
+            <p>深业东城国际</p>
+          </div>
+          <div class="info">
+            <span class="desc">3室2厅·81.01平米</span>
+            <div class="price">
+              <span class="price-ref">参考价:</span>
+              <span class="price-val">293万</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="bg">
+          <img alt="" class="tag-img" src="img/tag.png">
+
+          <img alt="" class="vrlogo" src="img/vrlogo@2x.png">
+        </div>
+        <div class="bottom">
+          <div class="name">
+            <p>坪山区·坪山</p>
+            <p>深业东城国际</p>
+          </div>
+          <div class="info">
+            <span class="description">3室2厅·81.01平米</span>
+            <div class="price">
+              <span class="price-ref">参考价:</span>
+              <span class="price-val">293万</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="bg">
+          <img alt="" class="tag-img" src="img/tag.png">
+
+          <img alt="" class="vrlogo" src="img/vrlogo@2x.png">
+        </div>
+        <div class="bottom">
+          <div class="name">
+            <p>坪山区·坪山</p>
+            <p>深业东城国际</p>
+          </div>
+          <div class="info">
+            <span class="description">3室2厅·81.01平米</span>
+            <div class="price">
+              <span class="price-ref">参考价:</span>
+              <span class="price-val">293万</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="wrapper new-house">
+    <div class="house-title">
+      <h2 class="name">小区精选</h2>
+      <p class="sub-name">
+        纵览小区，恋上这座城
+        <a href="/ershoufang/">更多深圳小区</a>
+      </p>
+    </div>
+
+    <div class="house">
+      <div class="item">
+        <div class="bg">
+          <img alt="" class="new-img" src="img/bg-new-house.jpg">
+        </div>
+        <div class="info">
+          <div class="desc">
+            <span class="name">信义御城豪园</span>
+            <span class="price">41000元/平</span>
+          </div>
+          <div class="time">2013年建</div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="bg">
+          <img alt="" class="new-img" src="img/bg-new-house.jpg">
+        </div>
+        <div class="info">
+          <div class="desc">
+            <span class="name">信义御城豪园</span>
+            <span class="price">41000元/平</span>
+          </div>
+          <div class="time">2013年建</div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="bg">
+          <img alt="" class="new-img" src="img/bg-new-house.jpg">
+        </div>
+        <div class="info">
+          <div class="desc">
+            <span class="name">信义御城豪园</span>
+            <span class="price">41000元/平</span>
+          </div>
+          <div class="time">2013年建</div>
+        </div>
+      </div>
+
+    </div>
+  </div>
   <script src="./js/jquery-3.7.1.js"></script>
   <script src="./js/request.js"></script>
+  <script src="./js/home.js"></script>
+
 </body>
 </html>
