: 前端开发基础

--- a/03-常用的JavaScript库/02_ajax请求库的封装/index.html
+++ b/03-常用的JavaScript库/02_ajax请求库的封装/index.html
@@ -86,7 +86,7 @@
             <li><span>星海名城</span></li>
             <li><span>诺德国际花园</span></li>
             <li><span>金弘凯城</span></li>
-            <li><font color='#3072F6'>龙华</font>小区</li>
+            <li><span style="color: #3072F6">龙华</span>小区</li>
           </ul>
         </div>
       </div>
@@ -247,6 +247,7 @@
     </div>
   </div>
   <script src="./js/jquery-3.7.1.js"></script>
+  <script src="./js/config.js"></script>
   <script src="./js/request.js"></script>
   <script src="./js/home.js"></script>
 
