: 前端开发基础

--- a/03-常用的JavaScript库/03_lodash/03_Lodash的使用.html
+++ b/03-常用的JavaScript库/03_lodash/03_Lodash的使用.html
@@ -13,7 +13,7 @@
     console.log(_.camelCase("--foo-bar--")) // 驼峰命名
     console.log(_.capitalize("foobar")) // 首字母大写
     console.log(_.endsWith('logo.png', '.png')) // 判断以 xxx 结尾
-    console.log(_.padStart('9', 2, '0')) // 补零
+    console.log(_.padStart('9', 2, '0')) // 向左填充
   </script>
 </body>
 </html>
