: 前端开发基础

--- a/03-常用的JavaScript库/04_dayjs/02_获取和设置时间.html
+++ b/03-常用的JavaScript库/04_dayjs/02_获取和设置时间.html
@@ -11,7 +11,7 @@
   <script src="./js/dayjs_1.11.9.min.js"></script>
   <script>
     console.log(dayjs())
-    console.log(dayjs().year(), dayjs().month(), dayjs().date())
+    console.log(dayjs().year(), dayjs().month() + 1, dayjs().date())
 
   </script>
 
