--- a/03-常用的JavaScript库/05_bootstrap/01_初识bootstrap.html
+++ b/03-常用的JavaScript库/05_bootstrap/01_初识bootstrap.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Title</title>
   <link href="./bootstrap-4.6.1/css/bootstrap.min.css" rel="stylesheet">
-  <script src="./js/jquery.3.6.0-slim.js"></script>
+  <script src="./js/jquery-3.6.0.js"></script>
   <script src="./bootstrap-4.6.1/js/bootstrap.bundle.js"></script>
 </head>
 <body>
