: 前端开发基础

--- a/03-常用的JavaScript库/05_bootstrap/05_bootstrap的网格系统的嵌套.html
+++ b/03-常用的JavaScript库/05_bootstrap/05_bootstrap的网格系统的嵌套.html
@@ -37,7 +37,7 @@
           <div class="col-3 item2">4</div>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-6 item">
         <div class="row">
           <div class="col-3 item2">5</div>
           <div class="col-3 item2">6</div>
