--- a/03-常用的JavaScript库/05_bootstrap/06_bootstrap的网格系统的响应式类.html
+++ b/03-常用的JavaScript库/05_bootstrap/06_bootstrap的网格系统的响应式类.html
@@ -24,12 +24,12 @@
 
   <div class="container-fluid box">
     <div class="row">
-      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 item">1</div>
-      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 item">2</div>
-      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 item">3</div>
-      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 item">4</div>
-      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 item">5</div>
-      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 item">6</div>
+      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-12 item">1</div>
+      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-12 item">2</div>
+      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-12 item">3</div>
+      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-12 item">4</div>
+      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-12 item">5</div>
+      <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-12 item">6</div>
     </div>
   </div>
 
