--- a/03-常用的JavaScript库/06_官网/index.html
+++ b/03-常用的JavaScript库/06_官网/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- 导航栏 -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <!-- logo -->
       <a class="navbar-brand" href="#">
@@ -47,7 +47,7 @@
             <a href="#">关于我们</a>
           </li>
         </ul>
-        <p class="link-text">咨询热线：400-820-8820</p>
+        <p class="link-text hot-line">咨询热线：400-820-8820</p>
       </div>
     </div>
   </nav>
