--- a/03-常用的JavaScript库/06_官网/index.html
+++ b/03-常用的JavaScript库/06_官网/index.html
@@ -47,7 +47,7 @@
             <a href="#">关于我们</a>
           </li>
         </ul>
-        <p class="link-text hot-line">咨询热线：400-820-8820</p>
+        <p class="hot-line">咨询热线：400-820-8820</p>
       </div>
     </div>
   </nav>
