--- a/03-常用的JavaScript库/06_官网/index.html
+++ b/03-常用的JavaScript库/06_官网/index.html
@@ -21,11 +21,12 @@
       <a class="navbar-brand" href="#">
         <img alt="" class="logo" src="./assets/logo.png">
       </a>
-      <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+      <!-- 移动端、平板等设备显示的按钮" -->
+      <button class="navbar-toggler"
               data-target="#navbarNav" data-toggle="collapse" type="button">
-        <span class="navbar-toggler-icon"></span>
+        <img alt="" class="expand-icon" src="./assets/show-icon.png">
       </button>
-      <!-- 导航项 -->
+      <!-- 导航列表 -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="link-text">
@@ -51,7 +52,7 @@
       </div>
     </div>
   </nav>
-
+  <!-- 轮播图 -->
   <div class="container">
     ddd
   </div>
