--- a/03-常用的JavaScript库/06_官网/index.html
+++ b/03-常用的JavaScript库/06_官网/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- 导航栏 -->
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <!-- logo -->
       <a class="navbar-brand" href="#">
