--- a/03-常用的JavaScript库/06_官网/index.html
+++ b/03-常用的JavaScript库/06_官网/index.html
@@ -29,7 +29,7 @@
       <!-- 导航列表 -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="link-text">
+          <li class="link-text active">
             <a href="#">首页</a>
           </li>
           <li class="link-text">
