--- a/03-常用的JavaScript库/06_官网/index.html
+++ b/03-常用的JavaScript库/06_官网/index.html
@@ -53,8 +53,29 @@
     </div>
   </nav>
   <!-- 轮播图 -->
-  <div class="container">
-    ddd
+  <div class="carousel slide" data-ride="carousel" id="carouselExampleIndicators">
+    <ol class="carousel-indicators">
+      <li class="active" data-slide-to="0" data-target="#carouselExampleIndicators"></li>
+      <li data-slide-to="1" data-target="#carouselExampleIndicators"></li>
+      <li data-slide-to="2" data-target="#carouselExampleIndicators"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img alt="..." class="d-block w-100" src="./assets/banner0.png">
+      </div>
+      <div class="carousel-item">
+        <img alt="..." class="d-block w-100" src="./assets/banner1.png">
+      </div>
+      <div class="carousel-item">
+        <img alt="..." class="d-block w-100" src="./assets/banner2.png">
+      </div>
+    </div>
+    <button class="carousel-control-prev" data-slide="prev" data-target="#carouselExampleIndicators" type="button">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" data-slide="next" data-target="#carouselExampleIndicators" type="button">
+      <span class="carousel-control-next-icon"></span>
+    </button>
   </div>
 
 </body>
