--- a/03-常用的JavaScript库/06_官网/index.html
+++ b/03-常用的JavaScript库/06_官网/index.html
@@ -54,11 +54,13 @@
   </nav>
   <!-- 轮播图 -->
   <div class="carousel slide" data-ride="carousel" id="carouselExampleIndicators">
+    <!-- 指示器 -->
     <ol class="carousel-indicators">
       <li class="active" data-slide-to="0" data-target="#carouselExampleIndicators"></li>
       <li data-slide-to="1" data-target="#carouselExampleIndicators"></li>
       <li data-slide-to="2" data-target="#carouselExampleIndicators"></li>
     </ol>
+    <!-- 轮播图图片 -->
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img alt="..." class="d-block w-100" src="./assets/banner0.png">
@@ -70,6 +72,7 @@
         <img alt="..." class="d-block w-100" src="./assets/banner2.png">
       </div>
     </div>
+    <!-- 分页：上一张和下一张 -->
     <button class="carousel-control-prev" data-slide="prev" data-target="#carouselExampleIndicators" type="button">
       <span class="carousel-control-prev-icon"></span>
     </button>
