--- a/03-常用的JavaScript库/06_官网/index.html
+++ b/03-常用的JavaScript库/06_官网/index.html
@@ -11,6 +11,7 @@
   <script src="./bootstrap-4.6.1/js/jquery-3.6.0.js"></script>
   <script src="./bootstrap-4.6.1/js/bootstrap.bundle.js"></script>
   <link href="./css/navbar.css" rel="stylesheet">
+  <link href="./css/target-customer.css" rel="stylesheet">
 </head>
 <body>
 
@@ -79,6 +80,47 @@
     <button class="carousel-control-next" data-slide="next" data-target="#carouselExampleIndicators" type="button">
       <span class="carousel-control-next-icon"></span>
     </button>
+  </div>
+  <!-- 目标客户 -->
+  <div class="target-customer">
+    <!-- 标题 -->
+    <h1 class="text-center title">目标客户</h1>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="item col-lg-3 col-md-6 col-sm-12 ">
+          <img alt="" class="d-none d-sm-block" src="./assets/target-1.png">
+          <div class="sub-title text-center">电子银行</div>
+          <div class="desc text-center">
+            <p>助力五大行、商业银行、城商行、农商行、农信社等</p>
+            <p>手机银行与直销银行APP消费场景升级</p>
+          </div>
+        </div>
+        <div class="item col-lg-3 col-md-6 col-sm-12 ">
+          <img alt="" class="d-none d-sm-block" src="./assets/target-2.png">
+          <div class="sub-title text-center">金服平台</div>
+          <div class="desc text-center">
+            <p>助力钱包、小贷、基金、保险、信托、证券等</p>
+            <p>金融服务平台APP消费场景升级</p>
+          </div>
+        </div>
+        <div class="item col-lg-3 col-md-6 col-sm-12 ">
+          <img alt="" class="d-none d-sm-block" src="./assets/target-3.png">
+          <div class="sub-title text-center">企业福利</div>
+          <div class="desc text-center">
+            <p>助力国有、私营、外资、人力资源公司等</p>
+            <p>企业报销与福利系统消费场景升级</p>
+          </div>
+        </div>
+        <div class="item col-lg-3 col-md-6 col-sm-12 ">
+          <img alt="" class="d-none d-sm-block" src="./assets/target-4.png">
+          <div class="sub-title text-center">智能终端</div>
+          <div class="desc text-center">
+            <p>助力机器人、汽车中控、电子屏、商用电视等</p>
+            <p>人工智能语音消费场景升级</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
 </body>
