: 前端工程化基础

--- a/04-前端工程化基础/04_ESModule初识/index.html
+++ b/04-前端工程化基础/04_ESModule初识/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <script type="module">
-    import {name, age} from './js/demo.js'
+    import {name as demoName, age} from './js/demo.js'
 
-    console.log(name, age)
+    console.log(demoName, age)
   </script>
 </body>
 </html>
