: 前端开发基础

--- a/05-Vue3全家桶/01_初识Vue3/02_本地引入.html
+++ b/05-Vue3全家桶/01_初识Vue3/02_本地引入.html
@@ -14,10 +14,12 @@
   <script>
     const {createApp} = Vue
 
+    // 创建 app
     const app = createApp({
       template: `<h2>你好，世界</h2>`
     })
 
+    // 挂载 app
     app.mount('#app')
   </script>
 
