--- a/05-Vue3全家桶/02_模板语法/01_插值语法.html
+++ b/05-Vue3全家桶/02_模板语法/01_插值语法.html
@@ -13,6 +13,9 @@
     <!-- 基本使用 -->
     <h2>{{message}}</h2>
     <h2>当前计数：{{count}}</h2>
+    <!-- 表达式 -->
+    <h2>计数双倍：{{count*2}}</h2>
+    <h2>展示的信息：{{info.split(' ')}}</h2>
   </div>
 
   <script>
@@ -22,7 +25,8 @@
       data() {
         return {
           message: 'Hello World',
-          count: 0
+          count: 1,
+          info: 'my name is god'
         }
       },
     })
