: 前端工程化基础

--- a/05-Vue3全家桶/02_模板语法/07_v-bind指令_绑定基本属性.html
+++ b/05-Vue3全家桶/02_模板语法/07_v-bind指令_绑定基本属性.html
@@ -17,6 +17,8 @@
     <!-- 绑定 a 的超链接 -->
     <a v-bind:href="href">百度一下，你就知道</a>
     <button @click="switchImage">切换图片</button>
+    <!-- 语法糖 -->
+    <img :src="imgUrl" alt="">
   </div>
 
   <script>
