--- a/05-Vue3全家桶/02_模板语法/10_v-bind指令_绑定class属性.html
+++ b/05-Vue3全家桶/02_模板语法/10_v-bind指令_绑定class属性.html
@@ -22,11 +22,11 @@
     <!-- 基本绑定 -->
     <h2 :class="classes">{{message}}</h2>
 
-    <!-- 动态绑定 classes 数组写法 -->
+    <!-- 动态绑定 classes 数组写法【了解】 -->
     <h2 :class="['active','pink']">呵呵哒</h2>
-    <!-- 动态绑定 classes 数组写法 -->
+    <!-- 动态绑定 classes 数组写法【了解】 -->
     <h2 :class="['active',classes]">呵呵哒</h2>
-    <!-- 动态绑定 classes 数组写法 -->
+    <!-- 动态绑定 classes 数组写法【了解】 -->
     <h2 :class="[classes,{active: isActive}]">呵呵哒</h2>
   </div>
 
