--- a/05-Vue3全家桶/03_绑定事件/01_绑定事件的基本使用.html
+++ b/05-Vue3全家桶/03_绑定事件/01_绑定事件的基本使用.html
@@ -27,7 +27,7 @@
     <div class="box1" v-on:click="divClick"></div>
     <!-- 语法糖 -->
     <div @click="divClick" class="box2"></div>
-    <!-- 绑定方法的位置也可以写成表达式 -->
+    <!-- 绑定方法的位置也可以写成表达式【了解】 -->
     <h2>{{count}}</h2>
     <button @click="this.count++">点我+1</button>
   </div>
