--- a/05-Vue3全家桶/03_绑定事件/01_绑定事件的基本使用.html
+++ b/05-Vue3全家桶/03_绑定事件/01_绑定事件的基本使用.html
@@ -29,7 +29,7 @@
     <div @click="divClick" class="box2"></div>
     <!-- 绑定方法的位置也可以写成表达式【了解】 -->
     <h2>{{count}}</h2>
-    <button @click="this.count++">点我+1</button>
+    <button @click="count++">点我+1</button>
   </div>
 
   <script>
