--- a/05-Vue3全家桶/04_条件渲染/06_条件渲染的案例.html
+++ b/05-Vue3全家桶/04_条件渲染/06_条件渲染的案例.html
@@ -29,7 +29,7 @@
     const app = createApp({
       data() {
         return {
-          imgUrl: './assets/wzry_qrcode.webp',
+          imgUrl: './assets/qrcode.webp',
           isActive: true
         }
       },
