--- a/05-Vue3全家桶/04_条件渲染/06_条件渲染的案例.html
+++ b/05-Vue3全家桶/04_条件渲染/06_条件渲染的案例.html
@@ -18,7 +18,7 @@
     <div>
       <button @click="toggle">切换</button>
     </div>
-    <template v-if="isActive">
+    <template v-if="isShow">
       <img :src="imgUrl" alt="">
     </template>
   </div>
@@ -30,12 +30,12 @@
       data() {
         return {
           imgUrl: './assets/qrcode.webp',
-          isActive: true
+          isShow: true
         }
       },
       methods: {
         toggle() {
-          this.isActive = !this.isActive
+          this.isShow = !this.isShow
         }
       }
     })
