--- a/05-Vue3全家桶/05_列表渲染/01_v-for的基本使用.html
+++ b/05-Vue3全家桶/05_列表渲染/01_v-for的基本使用.html
@@ -12,7 +12,7 @@
   <div id="app">
     <ul>
       <li v-for="(item,index) in movies">
-        {{item}}
+        {{index}}-{{item}}
       </li>
     </ul>
   </div>
