--- a/05-Vue3全家桶/05_列表渲染/01_v-for的基本使用.html
+++ b/05-Vue3全家桶/05_列表渲染/01_v-for的基本使用.html
@@ -10,9 +10,16 @@
 <body>
 
   <div id="app">
+    <h2>喜欢的电影：</h2>
     <ul>
       <li v-for="(item,index) in movies">
-        {{index}}-{{item}}
+        {{index}} - {{item}}
+      </li>
+    </ul>
+    <h2>产品列表</h2>
+    <ul>
+      <li v-for="(item,index) in productList">
+        {{item.id}} - {{item.name}} - {{item.price}}
       </li>
     </ul>
   </div>
@@ -23,7 +30,13 @@
     const app = createApp({
       data() {
         return {
-          movies: ['大话西游', '盗梦空间', '初恋那件小事', '星际穿越']
+          movies: ['大话西游', '盗梦空间', '初恋那件小事', '星际穿越'],
+          productList: [
+            {id: '001', name: 'iphone 14', price: 4000},
+            {id: '002', name: 'iphone 15', price: 5000},
+            {id: '003', name: '小米', price: 2999},
+            {id: '004', name: '华为', price: 1}
+          ]
         }
       },
       methods: {}
