--- a/05-Vue3全家桶/05_列表渲染/01_v-for的基本使用.html
+++ b/05-Vue3全家桶/05_列表渲染/01_v-for的基本使用.html
@@ -19,7 +19,9 @@
     <h2>产品列表</h2>
     <ul>
       <li v-for="(item,index) in productList">
-        {{item.id}} - {{item.name}} - {{item.price}}
+        <h3>商品编号：{{item.id}}</h3>
+        <p>商品名称：{{item.name}}</p>
+        <p>商品价格：{{item.price}}</p>
       </li>
     </ul>
   </div>
