--- a/05-Vue3全家桶/06_计算属性/04_计算属性的set和get（了解）.html
+++ b/05-Vue3全家桶/06_计算属性/04_计算属性的set和get（了解）.html
@@ -13,7 +13,7 @@
     <div>
       <h2>姓名：{{fullName}}</h2>
     </div>
-    <button @click="setFullName">修改姓名</button>
+    <button @click="setFullName">设置姓名</button>
   </div>
 
   <script>
