--- a/05-Vue3全家桶/08_书籍购物车/index.html
+++ b/05-Vue3全家桶/08_书籍购物车/index.html
@@ -6,11 +6,54 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Title</title>
   <script src="./js/vue@3.3.4.js"></script>
+  <script src="./js/data.js"></script>
+  <style>
+    table {
+      border-collapse: collapse;
+    }
+
+    table th, td {
+      border: 1px solid black;
+      padding: 8px 16px;
+    }
+
+    table thead {
+      background-color: #f5f5f5;
+    }
+  </style>
 </head>
 <body>
 
   <div id="app">
-    <h2>{{message}}</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>序号</th>
+          <th>书籍名称</th>
+          <th>出版日期</th>
+          <th>价格</th>
+          <th>购买数量</th>
+          <th>操作</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr :key="book.id" v-for="(book,index) in books">
+          <td>{{index+1}}</td>
+          <td>{{book.name}}</td>
+          <td>{{book.date}}</td>
+          <td>¥ {{book.price}}</td>
+          <td>
+            <button @click="subCount(book.id)">-</button>
+            {{book.count}}
+            <button @click="addCount(book.id)">+</button>
+          </td>
+          <td>
+            <button @click="remove(book.id)">移除</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <h2>总价：¥ {{totalPrice}}</h2>
   </div>
 
   <script>
@@ -19,7 +62,36 @@
     const app = createApp({
       data() {
         return {
-          message: 'Hello World'
+          books: books
+        }
+      },
+      computed: {
+        totalPrice() {
+          return this.books.reduce((prev, cur) => prev + (cur.price * cur.count), 0)
+        }
+      },
+      methods: {
+        subCount(id) {
+          this.books = this.books.map(item => {
+            if (item.count === 1) {
+              return item
+            }
+            if (item.id === id) {
+              item.count--
+            }
+            return item
+          })
+        },
+        addCount(id) {
+          this.books = this.books.map(item => {
+            if (item.id === id) {
+              item.count++
+            }
+            return item
+          })
+        },
+        remove(id) {
+          this.books.splice(this.books.findIndex(item => item.id === id), 1)
         }
       }
     })
