--- a/05-Vue3全家桶/08_书籍购物车/index.html
+++ b/05-Vue3全家桶/08_书籍购物车/index.html
@@ -41,7 +41,7 @@
           <td>{{index+1}}</td>
           <td>{{book.name}}</td>
           <td>{{book.date}}</td>
-          <td>¥ {{book.price}}</td>
+          <td>{{'¥'+ book.price}}</td>
           <td>
             <button @click="subCount(book.id)">-</button>
             {{book.count}}
@@ -53,7 +53,7 @@
         </tr>
       </tbody>
     </table>
-    <h2>总价：¥ {{totalPrice}}</h2>
+    <h2>总价：{{totalPrice}}</h2>
   </div>
 
   <script>
@@ -67,7 +67,7 @@
       },
       computed: {
         totalPrice() {
-          return this.books.reduce((prev, cur) => prev + (cur.price * cur.count), 0)
+          return '¥' + this.books.reduce((prev, cur) => prev + (cur.price * cur.count), 0)
         }
       },
       methods: {
