--- a/05-Vue3全家桶/08_书籍购物车/index.html
+++ b/05-Vue3全家桶/08_书籍购物车/index.html
@@ -53,7 +53,7 @@
             <button @click="increment(book)">+</button>
           </td>
           <td>
-            <button @click="remove(book)">移除</button>
+            <button @click="removeItem(book)">移除</button>
           </td>
         </tr>
       </tbody>
@@ -85,7 +85,7 @@
         increment(book) {
           book.count++
         },
-        remove(book) {
+        removeItem(book) {
           this.books.splice(this.books.findIndex(item => item.id === book.id), 1)
         }
       }
