--- a/05-Vue3全家桶/08_书籍购物车/index.html
+++ b/05-Vue3全家桶/08_书籍购物车/index.html
@@ -30,35 +30,40 @@
 <body>
 
   <div id="app">
-    <table>
-      <thead>
-        <tr>
-          <th>序号</th>
-          <th>书籍名称</th>
-          <th>出版日期</th>
-          <th>价格</th>
-          <th>购买数量</th>
-          <th>操作</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr :key="book.id" v-for="(book,index) in books">
-          <td>{{index+1}}</td>
-          <td>{{book.name}}</td>
-          <td>{{book.date}}</td>
-          <td>{{formatPrice(book.price)}}</td>
-          <td>
-            <button :disabled="book.count <= 1" @click="decrement(book)">-</button>
-            {{book.count}}
-            <button @click="increment(book)">+</button>
-          </td>
-          <td>
-            <button @click="removeItem(book)">移除</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <h2>总价：{{formatPrice(totalPrice)}}</h2>
+    <template v-if="books.length">
+      <table>
+        <thead>
+          <tr>
+            <th>序号</th>
+            <th>书籍名称</th>
+            <th>出版日期</th>
+            <th>价格</th>
+            <th>购买数量</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr :key="book.id" v-for="(book,index) in books">
+            <td>{{index+1}}</td>
+            <td>{{book.name}}</td>
+            <td>{{book.date}}</td>
+            <td>{{formatPrice(book.price)}}</td>
+            <td>
+              <button :disabled="book.count <= 1" @click="decrement(book)">-</button>
+              {{book.count}}
+              <button @click="increment(book)">+</button>
+            </td>
+            <td>
+              <button @click="removeItem(book)">移除</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <h2>总价：{{formatPrice(totalPrice)}}</h2>
+    </template>
+    <template v-else>
+      <h1>购物车为空，请添加喜欢的书籍~</h1>
+    </template>
   </div>
 
   <script>
