--- a/05-Vue3全家桶/08_书籍购物车/index.html
+++ b/05-Vue3全家桶/08_书籍购物车/index.html
@@ -43,7 +43,9 @@
           </tr>
         </thead>
         <tbody>
-          <tr :key="book.id" @mouseenter="mouseenter()" @mouseleave="mouseleave()"
+          <tr :class="{active: book.id === currentId}"
+              :key="book.id"
+              @click="liClick(book.id)"
               v-for="(book,index) in books">
             <td>{{index+1}}</td>
             <td>{{book.name}}</td>
@@ -73,7 +75,8 @@
     const app = createApp({
       data() {
         return {
-          books: books
+          books: books,
+          currentId: -1
         }
       },
       computed: {
@@ -82,6 +85,9 @@
         }
       },
       methods: {
+        liClick(id) {
+          this.currentId = id
+        },
         formatPrice(price) {
           return '¥' + price;
         },
@@ -93,12 +99,6 @@
         },
         removeBook(book) {
           this.books.splice(this.books.findIndex(item => item.id === book.id), 1)
-        },
-        mouseenter() {
-          console.log('mouseenter')
-        },
-        mouseleave() {
-          console.log('mouseleave')
         }
       }
     })
