--- a/05-Vue3全家桶/08_书籍购物车/index.html
+++ b/05-Vue3全家桶/08_书籍购物车/index.html
@@ -45,7 +45,7 @@
         <tbody>
           <tr :class="{active: book.id === currentId}"
               :key="book.id"
-              @click="liClick(book.id)"
+              @click="rowClick(book.id)"
               v-for="(book,index) in books">
             <td>{{index+1}}</td>
             <td>{{book.name}}</td>
@@ -85,7 +85,7 @@
         }
       },
       methods: {
-        liClick(id) {
+        rowClick(id) {
           this.currentId = id
         },
         formatPrice(price) {
