--- a/05-Vue3全家桶/09_双向绑定/01_v-model的基本使用.html
+++ b/05-Vue3全家桶/09_双向绑定/01_v-model的基本使用.html
@@ -10,6 +10,7 @@
 <body>
 
   <div id="app">
+    <!-- 手动实现了双向绑定 -->
     <input :value="message" @input="inputChange" type="text">
 
     <h2>{{message}}</h2>
