--- a/05-Vue3全家桶/09_双向绑定/01_v-model的基本使用.html
+++ b/05-Vue3全家桶/09_双向绑定/01_v-model的基本使用.html
@@ -12,8 +12,11 @@
   <div id="app">
     <!-- 手动实现了双向绑定 -->
     <input :value="message" @input="inputChange" type="text">
+    <!-- v-model实现双向绑定 -->
+    <input type="text" v-model="vMessage">
 
     <h2>{{message}}</h2>
+    <h2>{{vMessage}}</h2>
   </div>
 
   <script>
@@ -23,7 +26,8 @@
     const app = createApp({
       data() {
         return {
-          message: 'Hello Vue'
+          message: 'Hello Vue',
+          "vMessage": "Hello Vue"
         }
       },
       methods: {
