--- a/05-Vue3全家桶/09_双向绑定/04_v-model绑定radio.html
+++ b/05-Vue3全家桶/09_双向绑定/04_v-model绑定radio.html
@@ -10,12 +10,14 @@
 <body>
 
   <div id="app">
-    <label for="male">
-      <input id="male" type="radio" v-model="gender" value="男"> 男
-    </label>
-    <label for="female">
-      <input id="female" type="radio" v-model="gender" value="女"> 女
-    </label>
+    <div class="gender">
+      <label for="male">
+        <input id="male" name="gender" type="radio" v-model="gender" value="男"> 男
+      </label>
+      <label for="female">
+        <input id="female" name="gender" type="radio" v-model="gender" value="女"> 女
+      </label>
+    </div>
     <h2>性别：{{gender}}</h2>
   </div>
 
@@ -26,7 +28,7 @@
     const app = createApp({
       data() {
         return {
-          gender: ''
+          gender: '女'
         }
       },
       methods: {}
