--- a/05-Vue3全家桶/02_Vue的组件化开发/03_注册全局组件.html
+++ b/05-Vue3全家桶/02_Vue的组件化开发/03_注册全局组件.html
@@ -32,6 +32,11 @@
   </template>
 
   <script>
+    /*
+      步骤：
+        ① 通过 app.component(组件名称，组件对象) 注册全局组件
+        ② 在 App 组件的模板中，可以使用 product-item 组件
+    */
     const {createApp} = Vue
 
     // 根组件
