--- a/05-Vue3全家桶/06_Vue项目/vue-traveling/index.html
+++ b/05-Vue3全家桶/06_Vue项目/vue-traveling/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8"/>
   <link href="/vite.svg" rel="icon" type="image/svg+xml"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
+        name="viewport"/>
   <title>人在旅途</title>
 </head>
 <body>
