--- a/05-Vue3全家桶/07_Vue高级语法补充/vue-reactive/05_响应式依赖收集---自动收集依赖.html
+++ b/05-Vue3全家桶/07_Vue高级语法补充/vue-reactive/05_响应式依赖收集---自动收集依赖.html
@@ -25,15 +25,34 @@
     }
 
     // 设计专门执行响应式函数的函数
-    const dep = new Depend()
+    let reactiveFn = null
 
     function watchFn(fn) {
-      dep.addDepend(fn)
+      reactiveFn = fn
+      fn()
+      reactiveFn = null
     }
 
     const obj = {
       name: '许大仙',
       age: 18
+    }
+
+    // 封装函数：通过 obj 的 key 获取对应的 Depend 对象
+    const objMap = new WeakMap()
+
+    function getDepend(obj, key) {
+      let map = objMap.get(obj)
+      if (!map) {
+        map = new Map()
+        objMap.set(obj, map)
+      }
+      let dep = map.get(key)
+      if (!dep) {
+        dep = new Depend()
+        map.set(key, dep)
+      }
+      return dep
     }
 
     Object.keys(obj).forEach(key => {
@@ -42,24 +61,26 @@
         configurable: true,
         enumerable: true,
         get() {
+          const dep = getDepend(obj, key)
+          dep.addDepend(reactiveFn)
           return value
         },
         set(newVal) {
           value = newVal
+          const dep = getDepend(obj, key)
           dep.notify()
         }
       })
     })
 
     function foo() {
-      console.log('foo', obj.name)
-      console.log('foo', obj.age)
+      console.log('foo name', obj.name)
+      console.log('foo age', obj.age)
       console.log('foo 函数')
     }
 
     function bar() {
-      console.log('bar', obj.name + 'bar')
-      console.log('bar', obj.age + 2)
+      console.log('bar age', obj.age + 2)
       console.log('bar 函数')
     }
 
@@ -69,9 +90,6 @@
 
     // 修改了 obj 的属性
     obj.name = '李四'
-
-    obj.name = '王五'
-
   </script>
 </body>
 </html>
