--- a/05-Vue3全家桶/07_Vue高级语法补充/vue-reactive/05_响应式依赖收集---自动收集依赖.html
+++ b/05-Vue3全家桶/07_Vue高级语法补充/vue-reactive/05_响应式依赖收集---自动收集依赖.html
@@ -10,12 +10,12 @@
   <script>
     class Depend {
       constructor() {
-        this.reactiveFns = []
+        this.reactiveFns = new Set()
       }
 
       addDepend(fn) {
         if (fn) {
-          this.reactiveFns.push(fn)
+          this.reactiveFns.add(fn)
         }
       }
 
